Fix deleting and tabs not showing on gridfield item

--- a/scss/VisualEditor.scss
+++ b/scss/VisualEditor.scss
@@ -27,7 +27,7 @@
     width: auto;
     display: block;
 
-    .cms-content-header {
+    .cms-content-header-info {
       display: none;
     }
 
